@@ -1,6 +1,12 @@
 #!/usr/bin/make -f
 
-DESTDIR = debian/$(shell dh_listpackages)/usr/lib/$(DEB_BUILD_GNU_TYPE)
+ifeq ($(DEB_BUILD_ARCH), x86_64-linux-gnu)
+	ARCH=i386-linux-gnu
+else
+	ARCH=x86_64-linux-gnu
+endif
+
+DESTDIR = debian/$(shell dh_listpackages)/usr/lib/$(ARCH)
 
 %:
 	dh $@
